[FIX] - overflow

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,9 +6,12 @@
 }
 
 body {
-    margin: -8px;
+    //margin: -8px;
     height: 100vh;
     background: black;
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow: hidden;
 }
 
 .layout {
